# latensee

./: .gitignore  CLAUDE.md  README.md  dns_benchmark.py  generate_icon.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: dev-build.yml  release.yml  test.yml
features/01-stop-button/: plan.md
features/02-remove-server/: plan.md
features/03-export-chart-png/: plan.md
features/04-f5-shortcut/: plan.md
features/05-jitter-metric/: plan.md
features/06-copy-to-clipboard/: plan.md
features/07-benchmark-history/: plan.md
features/08-doh-support/: plan.md
features/09-custom-colors/: plan.md
features/10-cache-busting/: plan.md
features/11-percentiles/: plan.md
features/12-cache-hit-miss/: plan.md
features/13-one-click-apply/: plan.md
features/14-auto-system-dns/: plan.md
features/15-response-validation/: plan.md
features/16-continuous-monitoring/: plan.md
features/17-network-change-trigger/: plan.md
features/18-benchmark-profiles/: plan.md
features/19-ipv6-support/: plan.md
latensee/: __init__.py  core.py  servers.py
tests/: test_core.py  test_percentiles.py  test_response_validation.py
