[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "latensee"
version = "0.1.0"
description = "DNS resolver latency benchmarking library"
requires-python = ">=3.10"
dependencies = ["dnspython>=2.4.2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701"]  # E501: line length; E701: inline if-return style for lookup tables

[tool.pytest.ini_options]
testpaths = ["tests"]
